--- a/ListenUp/Info.plist
+++ b/ListenUp/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>JellyClub does not use your location. This message is caused by a third-party framework we use. We strongly encourage you to deny location usage here and would appreciate you reporting this message to the developers.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>JellyClub does not use your location. This message is caused by a third-party framework we use. We strongly encourage you to deny location usage here and would appreciate you reporting this message to the developers.</string>
 	<key>CFBundleIconName</key>
 	<string>AppIcon</string>
 	<key>NSAppTransportSecurity</key>
